<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <TextView
        android:id="@+id/PresentationText"
        android:layout_width="199dp"
        android:layout_height="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/PresentationText"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/today"
        app:layout_constraintEnd_toStartOf="@+id/progressBarHorizontal"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PresentationText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/HomePagePicture"
        android:layout_width="73dp"
        android:layout_height="43dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RankPicture"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/stats" />

    <ImageView
        android:id="@+id/RankPicture"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AwarenessPicture"
        app:layout_constraintStart_toEndOf="@+id/HomePagePicture"
        app:srcCompat="@drawable/podium" />

    <ImageView
        android:id="@+id/AwarenessPicture"
        android:layout_width="83dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/GamePicture"
        app:layout_constraintStart_toEndOf="@+id/RankPicture"
        app:srcCompat="@drawable/planet" />

    <ImageView
        android:id="@+id/GamePicture"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AwarenessPicture"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewHorizontalProgress"
        android:layout_width="34dp"
        android:layout_height="20dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toStartOf="@+id/progressBarHorizontal"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/progressBarHorizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="1"
        android:progressBackgroundTint="@android:color/darker_gray"
        android:progressTint="#8BC34A"
        android:rotation="270"
        android:scaleX="1"
        android:scaleY="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="76dp"
        android:layout_height="92dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PresentationText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pingouin" />


</androidx.constraintlayout.widget.ConstraintLayout>